--- a/produtos.html
+++ b/produtos.html
@@ -27,7 +27,7 @@
 			<ul class="produtos">
 				<li>
 					<h2>Cabelo</h2>
-					<img src="images/Produtos/cabelo.jpg">
+					<img src="images/produtos/cabelo.jpg">
 					<p class="produto-descricao">Na tesoura ou máquina, como o cliente preferir</p>
 					<p class="produto-preco">R$ 25,00</p>
 				</li>
