--- a/produtos.html
+++ b/produtos.html
@@ -27,19 +27,19 @@
 			<ul class="produtos">
 				<li>
 					<h2>Cabelo</h2>
-					<img src="images/produtos/cabelo.jpg">
+					<img src="images/Produtos/cabelo.jpg">
 					<p class="produto-descricao">Na tesoura ou máquina, como o cliente preferir</p>
 					<p class="produto-preco">R$ 25,00</p>
 				</li>
 				<li>
 					<h2>Barba</h2>
-					<img src="images/produtos/barba.jpg">
+					<img src="images/Produtos/barba.jpg">
 					<p class="produto-descricao">Corte e desenho profissional de barba</p>
 					<p class="produto-preco">R$ 18,00</p>
 				</li>
 				<li>
 					<h2>Cabelo + Barba</h2>
-					<img src="images/produtos/cabelo+barba.jpg">
+					<img src="images/Produtos/cabelo+barba.jpg">
 					<p class="produto-descricao">Pacote completo de cabelo e barba</p>
 					<p class="produto-preco">R$ 35,00</p>
 				</li>
