--- a/contato.html
+++ b/contato.html
@@ -11,7 +11,7 @@
 	<body>
 		<header>
 			<div class="caixa">
-				<h1><img src="images/Produtos/logo.png" alt="Logo da Barbearia Alura"></h1>
+				<h1><a href="index.html"><img src="images/Produtos/logo.png"></a></h1>
 
 				<nav>
 					<ul>
