--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<header>
 			<div class="caixa">
-				<h1><img src="images/Produtos/logo.png"></h1>
+				<h1><a href="index.html"><img src="images/Produtos/logo.png"></h1>
 
 				<nav>
 					<ul>
