--- a/produtos.html
+++ b/produtos.html
@@ -33,13 +33,13 @@
 				</li>
 				<li>
 					<h2>Barba</h2>
-					<img src="images/produtos/barba.jpg">
+					<img src="images/Produtos/barba.jpg">
 					<p class="produto-descricao">Corte e desenho profissional de barba</p>
 					<p class="produto-preco">R$ 18,00</p>
 				</li>
 				<li>
 					<h2>Cabelo + Barba</h2>
-					<img src="images/produtos/cabelo+barba.jpg">
+					<img src="images/Produtos/cabelo+barba.jpg">
 					<p class="produto-descricao">Pacote completo de cabelo e barba</p>
 					<p class="produto-preco">R$ 35,00</p>
 				</li>
